Fix some errors

--- a/AppFoody/app/src/main/res/values/strings.xml
+++ b/AppFoody/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="danhgia">Đánh giá</string>
     <string name="blogs">Blogs</string>
     <string name="topmember">Top thành viên</string>
-
+    <string name="datmon">Đặt món</string>
     <string name="dangtai">Đang Tải...</string>
     <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
     <string name="dangky">Đăng Ký</string>
