Chi tiết quán ăn

--- a/AppFoody/app/src/main/res/values/strings.xml
+++ b/AppFoody/app/src/main/res/values/strings.xml
@@ -34,5 +34,11 @@
     <string name="chuoithanhvien">Bạn không phải là thành viên ?</string>
     <string name="thongbaoemailkhonghople">Email bạn nhập không hợp lệ </string>
     <string name="thongbaoguimailthanhcong">Gửi email thành công !</string>
-
+    <string name="taianh">Tải ảnh</string>
+    <string name="checkin">Check in</string>
+    <string name="binhluan">Bình Luận</string>
+    <string name="chiase">Chia Sẻ</string>
+    <string name="luulai">Lưu lại</string>
+    <string name="dangmocua">Đang mở cửa</string>
+    <string name="dadongcua">Đã đóng cửa</string>
 </resources>
